EKS/manifests/Ingress/03-cip-for-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: aviz-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: aviz-app
  ports:
    - port: 80
      targetPort: 5000    # Flask runs on 5000, ALB hits port 80 on the service
