EKS/manifests/Ingress/ingress-single.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aviz-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: aviz-app-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:992189742322:certificate/e7b061b1-5c9c-4378-85c2-d2c61c402d43
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-Res-PQ-2025-09
spec:
  rules:
    - host: registration.awswithavinashreddy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aviz-service
                port:
                  number: 80
